trunk/Archive2/da/877f2f432bfe23/output
main.cpp: In function 'char* readTheFile()':
main.cpp:4:2: error: 'ifstream' was not declared in this scope
  ifstream myfile;
  ^
main.cpp:5:2: error: 'myfile' was not declared in this scope
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
  ^
main.cpp:5:29: error: 'ios' has not been declared
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
                             ^
main.cpp:5:39: error: 'ios' has not been declared
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
                                       ^
main.cpp:5:50: error: 'ios' has not been declared
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
                                                  ^
